# Blackbird

./: Cargo.toml  README.md  plan.md
application/: Cargo.toml
application/src/: lib.rs  main.rs  windowed.rs
application/src/event_loop/: mod.rs
application/src/platform/windows/: mod.rs
assets/: Cargo.toml
assets/src/: lib.rs
core/: Cargo.toml
core/src/: entity.rs  input.rs  lib.rs  world.rs
engine/: Cargo.toml
engine/src/: application.rs  asset.rs  entity.rs  input.rs  lib.rs  player_controller.rs  plugin.rs  windowed.rs  world.rs
engine/src/plugins/: assets.rs  gltf.rs  mod.rs
gltf/: Cargo.toml
gltf/src/: lib.rs
rendering/: Cargo.toml
rendering/src/: bvh.rs  cache.rs  camera.rs  camera_controller.rs  graph.rs  lib.rs  mesh.rs  pipeline.rs  profiler.rs  renderer.rs  resource.rs  shader.rs  texture.rs
rendering/src/camera/: entity.rs  mod.rs
rendering/src/light/: entity.rs  gpu.rs  mod.rs
rendering/src/mesh/: mod.rs
rendering/src/pass/: bvh_upload.rs  camera.rs  cluster_assignment.rs  gbuffer.rs  light_upload.rs  lighting.rs  mod.rs  present.rs  probe_atlas.rs  probe_trace.rs  probe_update.rs  sdf_voxelize.rs  shadow.rs
rendering/src/pbr/: builder.rs  mod.rs
rendering/src/renderer/: mod.rs
sandbox/: Cargo.toml
sandbox/shaders/: cluster_assignment.wgsl  gbuffer.wgsl  lighting.wgsl  present.wgsl  probe_helpers.wgsl  probe_trace.wgsl  probe_update.wgsl  sdf_voxelize.wgsl  shadow.wgsl  triangle.wgsl
sandbox/src/: gltf.rs  main.rs
src/: application.rs  main.rs
threading/: Cargo.toml
threading/src/: executor.rs  lib.rs
window/: Cargo.toml
window/src/: lib.rs
