[workspace]
resolver = "2"
members = [
  "core",
  "assets",
  "engine",
  "gltf",
  "rendering",
  "sandbox",
  "threading",
]

[workspace.dependencies]
anyhow = { version = "1.0.102" }
log = { version = "0.4.29" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
winit = { version = "0.30.13" }
slotmap = { version = "1.1.1" }
ultraviolet = { version = "0.10.0", features = ["int", "f64"] }
