[package]
name = "gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
gltf = { version = "1.4.1", features = [
  "extras",
  "names",
  "import",
  "utils",
  "guess_mime_type",
] }

thiserror = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }

assets = { path = "../assets/" }
engine_core = { path = "../core/" }
rendering = { path = "../rendering/" }
