[package]
name = "rendering"
version = "1.0.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }

bytemuck = { version = "1.25.0", features = ["derive"] }
wgpu = { version = "29.0.1", features = ["wgsl"] }
ultraviolet = { version = "0.10.0", features = ["int", "f64"] }

engine = { path = "../engine/" }
