[package]
name = "rendering"
version = "1.0.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
wgpu = { version = "29.0.1", features = ["wgsl"] }

log = { workspace = true }
thiserror = { workspace = true }
ultraviolet = { workspace = true }

assets = { path = "../assets/" }
engine_core = { path = "../core/" }
