[package]
name = "sandbox"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { version = "0.11.8" }
gltf = { version = "1.4.1", features = ["extras", "names", "import", "utils"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

engine = { path = "../engine/" }
rendering = { path = "../rendering/" }
application = { path = "../application/" }
