[package]
name = "sandbox"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { version = "0.11.10" }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

application = { path = "../application/" }
gltf = { path = "../gltf/" }
engine = { path = "../engine/" }
rendering = { path = "../rendering/" }
window = { path = "../window/" }
